test code: List.of -> Arrays.asList (this project jdk version downgrade to 1.8)